feat(rag): improve paper ingestion and language-aware reranking
Normalize HTML and GFM tables before indexing, and exclude reference sections from paper chunks to reduce retrieval noise.

Detect each document version's language, persist it in MySQL and Elasticsearch metadata, and upgrade the index mapping to schema v3.

Choose the BGE query per candidate language and rerank with only the leaf header, with coverage for chunking, language detection, mappings, and reranking.